syntax = "proto3";

package protos;

option go_package = "./admin_network";

service AdminNetworkService {
	rpc CreateDefaultNetwork(CreateDefaultAdminNetworkRequest) returns (CreateDefaultAdminNetworkResponse) {}
	rpc LoginNetwork(LoginNetworkRequest) returns (LoginNetworkResponse) {}
}

message CreateDefaultAdminNetworkRequest {
	string companyName = 1;
	string userID = 2;
	string email = 3;
}

message CreateDefaultAdminNetworkResponse {
	string organizationID = 1;
}

message LoginNetworkRequest {
	string networkName = 1;
	string userID = 2;
}

message LoginNetworkResponse {
	string organizationID = 1;
}
